Spacing fixes

--- a/website/src/page/blog-page/blog-authorship-bar.component.scss
+++ b/website/src/page/blog-page/blog-authorship-bar.component.scss
@@ -7,11 +7,10 @@
     flex-direction: row;
     align-items: center;
     gap: 10px;
-    margin-top: 40px;
+    margin-top: 24px;
 
     &.bp-author-small {
         gap: 8px;
-        margin-top: 24px;
     }
 
     @media (max-width: $media-max-width-mobile) {
