--- a/website/src/page/blog-page/blog-post-page.component.scss
+++ b/website/src/page/blog-page/blog-post-page.component.scss
@@ -21,7 +21,7 @@ $post-content-width: 800px;
     width: $post-content-width;
 
     h1 {
-        margin-top: 8px;
+        margin-top: 24px;
     }
 
     ::ng-deep p {
@@ -40,12 +40,11 @@ $post-content-width: 800px;
 }
 
 .bp-author-section {
-    margin-top: 40px;
     width: $post-content-width;
 }
 
 .bp-author-section-hr {
-    margin-top: 1em;
+    margin-top: 24px;
     border-top: 1px solid $color-vaticle-light-purple;
 }
 
@@ -63,7 +62,6 @@ $post-content-width: 800px;
     display: flex;
     flex-direction: row;
     gap: 8px;
-    margin-bottom: 8px;
 
     @media (max-width: $media-max-width-mobile) {
         font-size: 12px;
@@ -152,6 +150,10 @@ $post-content-width: 800px;
 
     :first-child {
         margin-top: 0;
+    }
+
+    section {
+        width: 800px;
     }
 
     /* prettier-ignore */
